send percel form created and necessary functionality added

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "aos": "^2.3.4",
     "daisyui": "^5.0.43",
+    "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
@@ -23,6 +24,7 @@
     "react-leaflet": "^5.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.2",
+    "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
