user dashboard created and add parcels data save in backend functionality added

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "aos": "^2.3.4",
+    "axios": "^1.10.0",
     "daisyui": "^5.0.43",
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
