--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-query": "^5.83.0",
     "aos": "^2.3.4",
     "axios": "^1.10.0",
     "daisyui": "^5.0.43",
